<resources>
    <string name="app_name">StepsBuddy</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="age">Age:</string>
    <string name="sex">Sex</string>
    <string name="csex">Sex:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="heightLabel">cm</string>
    <string name="weightLabel">lb</string>
    <string name="mode">Trace path: </string>
    <string name="cmode">Tracking:</string>
    <string name="noGeo">No</string>
    <string name="geo">Yes</string>
    <string name="precwarn">Track service requires GPS and consumes more battery</string>
    <string name="savebtn">Save</string>
    <string name="startbtn">Start</string>
    <string name="stopbtn">Stop</string>
    <string name="cancelbtn">No</string>
    <string name="modifybtn">Modify</string>
    <string name="goal">Goal:</string>
    <string name="steps">Steps</string>
    <string name="cal">Calories</string>
    <string name="tdee">TDEE</string>
    <string name="askSavePath">Do you want to save the current path?</string>
    <string name="name">Insert a name for your path: </string>
    <string name="abilGPS">Turn on GPS to use the tracking feature</string>
    <string name="abort">Cancel</string>
    <string name="savedTracks">Saved Tracks</string>
    <string name="namecol">Name</string>
    <string name="datacol">Data</string>
    <string name="distcol">Distance(mt)</string>
    <string name="timecol">Time(min)</string>
    <string name="del">Delete</string>
    <string name="load">Load</string>
    <string name="share">Share</string>
    <string name="blmsg">The app needs costant access to the GPS to work properly</string>
    <string name="permmsg">The app needs some permissions, otherwise it won\'t work</string>
    <string name="permtitle">Permissions needed</string>
    <string name="posbtn">Try again</string>
    <string name="negbtn">Cancel</string>
    <string name="blbtn">Ok</string>
    <string name="start">Start</string>
    <string name="end">End</string>
</resources>