<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settingsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/settings"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/settingsHeader">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/age"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/ageInput"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="3"
                    android:gravity="end"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/sex"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/radio_male"
                    android:paddingHorizontal="10dp">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/purple_200"
                        android:tag="sex_male"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/purple_200"
                        android:tag="sex_female"
                        android:text="@string/female" />
                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/height"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/heightInput"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="end"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/heightLabel"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/weight"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/weightInput"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="end"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/weightLabel"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:paddingTop="10dp"
                android:text="@string/mode"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/radio_noGeo"
                android:paddingHorizontal="10dp">

                <RadioButton
                    android:id="@+id/radio_noGeo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/purple_200"
                    android:tag="accgeo"
                    android:text="@string/noGeo" />

                <RadioButton
                    android:id="@+id/radio_geo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/purple_200"
                    android:tag="accgeo"
                    android:text="@string/geo" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingBottom="10dp"
                android:text="@string/precwarn"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/goal"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/goalInput"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:ems="10"
                    android:gravity="end"
                    android:maxLength="5"
                    android:inputType="numberDecimal"
                    tools:ignore="RtlHardcoded" />

                <RadioGroup
                    android:id="@+id/goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/radio_steps"
                    android:background="@drawable/rect_switch"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp">

                    <RadioButton
                        android:id="@+id/radio_steps"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:background="@drawable/switch_bckgd"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/steps" />

                    <RadioButton
                        android:id="@+id/radio_cal"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginStart="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/switch_bckgd"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:text="@string/cal" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/savebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/savebtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/clNotification"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/savebtn"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>