<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settingsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/settings"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:background="@drawable/def_bckgnd"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/settingsHeader">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/age"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/age_display"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:paddingStart="5dp"
                    android:paddingEnd="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/csex"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/sex_display"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:paddingHorizontal="20dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/height"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/height_display"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_toStartOf="@+id/height_label"
                    android:gravity="right"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/height_label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/heightLabel"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/weight"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/weight_display"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_toStartOf="@+id/weight_label"
                    android:gravity="right"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/weight_label"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:text="@string/weightLabel"
                    android:textSize="15sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/cmode"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/mode_display"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:paddingHorizontal="20dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:text="@string/goal"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/goal_display"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_toStartOf="@+id/goal_label"
                    android:gravity="right"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/goal_label"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:text="Calories"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/modifybtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/modifybtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/tdee_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/tdee"
            android:textColor="#FFD700"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modifybtn" />

        <TextView
            android:id="@+id/tdee_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tdee_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>